[gd_scene load_steps=31 format=3 uid="uid://co73jgm5t0t77"]

[ext_resource type="Script" path="res://scenes/elements/player/player.gd" id="1_vpdhh"]
[ext_resource type="PackedScene" uid="uid://cwcddy80ujjr6" path="res://scenes/elements/player/player_death.tscn" id="2_rrmk8"]
[ext_resource type="PackedScene" uid="uid://b6oi537lhw6vk" path="res://scenes/elements/footstep_particles.tscn" id="3_rvm6q"]
[ext_resource type="Script" path="res://scripts/finite_state_machine/state_machine.gd" id="4_iuqk4"]
[ext_resource type="Script" path="res://scenes/elements/player/player_states/player_normal_state.gd" id="5_l7431"]
[ext_resource type="Script" path="res://scenes/elements/player/player_states/player_dash_state.gd" id="6_pr06t"]
[ext_resource type="Script" path="res://scenes/elements/player/player_states/player_input_disabled_state.gd" id="7_82wom"]
[ext_resource type="PackedScene" uid="uid://ckx3tmvgx6qcn" path="res://scenes/util/random_audio_stream_player.tscn" id="8_y2s71"]
[ext_resource type="AudioStream" uid="uid://caktj2wskpvqy" path="res://assets/sounds/footstep_wood_001.ogg" id="9_40whi"]
[ext_resource type="AudioStream" uid="uid://c5fxe8n7to8q4" path="res://assets/sounds/footstep_wood_002.ogg" id="10_26b3f"]
[ext_resource type="AudioStream" uid="uid://di452ohmaseid" path="res://assets/sounds/footstep_wood_003.ogg" id="11_ex6ai"]
[ext_resource type="AudioStream" uid="uid://dybi5w1bkl2v" path="res://assets/sounds/footstep_wood_004.ogg" id="12_tmmi0"]
[ext_resource type="AudioStream" uid="uid://b5gkfkpaasc7u" path="res://assets/sounds/footstep_concrete_003.ogg" id="13_djagl"]
[ext_resource type="AudioStream" uid="uid://bxs31piu0dgr4" path="res://assets/sounds/footstep_concrete_004.ogg" id="14_5nusg"]
[ext_resource type="AudioStream" uid="uid://bivglbnbjjqje" path="res://assets/sounds/footstep_concrete_000.ogg" id="15_y24pq"]
[ext_resource type="AudioStream" uid="uid://l1e3bf68bqpx" path="res://assets/sounds/footstep_concrete_001.ogg" id="16_bbp5d"]
[ext_resource type="AudioStream" uid="uid://cu3qclj25yfu" path="res://assets/sounds/footstep_concrete_002.ogg" id="17_hjynu"]
[ext_resource type="AudioStream" uid="uid://cq3gp18ih180p" path="res://assets/sounds/impactBell_heavy_004.ogg" id="18_dt65n"]
[ext_resource type="Shader" path="res://scenes/elements/player/player.gdshader" id="19_80wg7"]
[ext_resource type="Texture2D" uid="uid://2xf3vk0m7l0d" path="res://assets/player/player_0.png" id="20_ou88g"]
[ext_resource type="Texture2D" uid="uid://dcv21jpo7lych" path="res://assets/player/player_1.png" id="21_xbms4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o66uq"]
shader = ExtResource("19_80wg7")
shader_parameter/base_color = Color(0.294118, 0.796078, 0.623529, 1)

[sub_resource type="Curve" id="Curve_a88fb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.258247, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0248897), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_yeqbm"]
curve = SubResource("Curve_a88fb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vy65x"]
particle_flag_disable_z = true
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_yeqbm")

[sub_resource type="SpriteFrames" id="SpriteFrames_gc3yh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_ou88g")
}],
"loop": true,
"name": &"idle",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_xbms4")
}],
"loop": true,
"name": &"jump",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_xbms4")
}, {
"duration": 1.0,
"texture": ExtResource("20_ou88g")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jh2ei"]
radius = 13.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0v88"]
size = Vector2(7, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nljwu"]
height = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec1gn"]
size = Vector2(10, 16)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 16
script = ExtResource("1_vpdhh")
player_death_scene = ExtResource("2_rrmk8")
footstep_scene = ExtResource("3_rvm6q")
dash_hurtbox_mask = 4

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_iuqk4")
initial_state = NodePath("Normal")

[node name="Normal" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_l7431")
player = NodePath("../..")

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_pr06t")
player = NodePath("../..")

[node name="InputDisabled" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_82wom")
player = NodePath("../..")

[node name="FootstepsSoundPlayer" parent="." instance=ExtResource("8_y2s71")]
enable_pitch_randomization = true

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("9_40whi")
bus = &"Footsteps"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("10_26b3f")
bus = &"Footsteps"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("11_ex6ai")
bus = &"Footsteps"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("12_tmmi0")
bus = &"Footsteps"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("13_djagl")
bus = &"Footsteps"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("14_5nusg")
bus = &"Footsteps"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("15_y24pq")
bus = &"Footsteps"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("16_bbp5d")
bus = &"Footsteps"

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("17_hjynu")
bus = &"Footsteps"

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("13_djagl")
bus = &"Footsteps"

[node name="AudioStreamPlayer11" type="AudioStreamPlayer" parent="FootstepsSoundPlayer"]
stream = ExtResource("14_5nusg")
bus = &"Footsteps"

[node name="DashAudioPlayer" parent="." instance=ExtResource("8_y2s71")]
enable_pitch_randomization = true
min_pitch_scale = 0.8
max_pitch_scale = 1.0
allow_sound_overlaping = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DashAudioPlayer"]
stream = ExtResource("18_dt65n")
max_polyphony = 5
bus = &"PlayerDash"

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashParticles" type="GPUParticles2D" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_o66uq")
position = Vector2(0, -12)
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_vy65x")
texture = ExtResource("20_ou88g")
lifetime = 0.4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.08165e-12, -12)
sprite_frames = SubResource("SpriteFrames_gc3yh")
animation = &"run"

[node name="Pickup" type="Area2D" parent="."]
position = Vector2(-2.08165e-12, -12)
collision_layer = 256
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup"]
shape = SubResource("CircleShape2D_jh2ei")
debug_color = Color(0.639216, 0.517647, 0.25098, 0.419608)

[node name="Win" type="Area2D" parent="."]
visible = false
position = Vector2(-2.08165e-12, -12)
collision_layer = 1024
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Win"]
shape = SubResource("CircleShape2D_jh2ei")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(2.08165e-12, -8)
collision_layer = 0
collision_mask = 132

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_a0v88")
debug_color = Color(0.913725, 0.25098, 0.372549, 0.419608)

[node name="EnemyKill" type="Area2D" parent="."]
visible = false
position = Vector2(-2.08165e-12, -11)
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyKill"]
rotation = -1.57079
shape = SubResource("CapsuleShape2D_nljwu")
disabled = true
debug_color = Color(0.337067, 0.304, 0.8, 0.501961)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_ec1gn")
debug_color = Color(1, 1, 1, 0.419608)

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="Win" to="." method="_on_win_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
